# FastAPI

2. 4 Lecture Video/fastapi-call-himselfly/: pyproject.toml
2. 4 Lecture Video/fastapi-call-himselfly/todos/: main.py
New folder/hello-fastapi/: pyproject.toml
New folder/hello-fastapi/todos/: main.py
